tests/errors/test_85.x
// Function imported into namespace already exists

using io;

fn print(x: i64) -> void {

}

fn main() -> void {}
